<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragment_qrcode"
        android:title="@string/scan_qr_code"/>

    <item
        android:id="@+id/fragment_setting"
        android:title="@string/setting" />

    <item
        android:id="@+id/fragment_about"
        android:title="@string/about"/>

</menu>