<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="download_log"
        android:summary="@string/summary_download_log_preference"
        android:title="@string/title_download_log_preference"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="send_feedback"
        android:title="@string/title_send_feedback_preference"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="about"
        android:title="@string/title_about_preference"
        app:iconSpaceReserved="false" />

</PreferenceScreen>