<!DOCTYPE resources [<!ENTITY appname "Share to Computer">]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="version_name">1.1.5</string>
    <string name="channel_name">Default notification</string>
    <string name="channel_description">Common notification</string>
    <string name="notification_title">&appname;</string>
    <string name="notification_server_text">Open from your browser http://%1$s:%2$s</string>
    <string name="download_url">http://%1$s:%2$s</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="source_code">Source code</string>
    <string name="source_code_url">https://github.com/jimmod/ShareToComputer</string>
    <string name="license">License</string>
    <string name="license_detail">GNU General Public License version 3 or later.\nCopyright © 2019 Jimmy</string>
    <string name="stop_share">Stop sharing</string>
    <string name="stop">Stop</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <plurals name="info_downloading">
        <item quantity="one">Download %1$d of %2$d file</item>
        <item quantity="other">Download %1$d of %2$d files</item>
    </plurals>
    <string name="qrcode_url">http://%1$s:%2$s</string>
    <string name="scan_qr_code">Scan QR code</string>

    <string name="warning_newer_qrcode">[&appname;] Start downloading\nWarning: newer version QR code detected, please update to newer version</string>
    <string name="warning_unknown_qrcode">Unknown QR code format</string>

    <string name="info_download_start">[&appname;] Start downloading</string>
    <string name="info_download_completed">[&appname;] Download complete</string>
    <string name="share_image_video">Share Image/Video</string>
    <string name="share_file">Share File</string>
    <string name="download_instruction_qr_code">Download with QR code</string>
    <string name="download_instruction_browser">Download from browser:</string>
    <string name="title_download_log_preference">Download log</string>
    <string name="summary_download_log_preference">Copy mylog.log to download directory</string>
    <string name="info_download_log_complete">Log file downloaded</string>
    <string name="title_send_feedback_preference">Send Feedback</string>
    <string name="feedback_mail_title">[&appname;] Feedback</string>
    <string name="error_fail_send_feedback">Unable to open mail application</string>
    <string name="error_wifi_required">Connection to Wi-Fi network is required</string>
    <string name="feedback_email_body"><![CDATA[<put your feedback here>]]></string>

    <string name="tab_title_send">Send</string>
    <string name="tab_title_receive">Receive</string>
    <string name="tab_title_setting">Setting</string>
    <string name="title_about_preference">About</string>
    <string name="receive_from_computer">From computer</string>
    <string name="success_web_upload">File successfully uploaded. Check on your phone</string>
    <string name="error_failed_web_upload">Upload failed, file exists on your phone</string>
    <string name="upload_another_file">Upload another file</string>
    <string name="stop_receiving">Stop receiving</string>
    <string name="upload_from_your_browser">Upload from your browser</string>
    <string name="info_success_web_upload">File successfully received. Click to open</string>
</resources>
